@@ -25,5 +25,6 @@
 gboolean preferences_exist (void);
 void load_preferences (void);
 void set_version (void);
+void set_nickname (const gchar *nick);
 
 #endif
